Verify: Fix build errors and complete runtime verification
Build Verification:
- Fixed ByteBuddy Java 21 compatibility by enabling experimental mode
- Added smallrye-reactive-messaging-in-memory dependency
- Fixed reactive messaging channel conflicts (orders-in/orders-out)
- Created database migration V1_3 for missing sequences (ORDER_ITEMS_SEQ, ORDERS_SEQ)
- Build passes successfully with all 26 source files compiling

Runtime Verification:
- Application starts successfully in 1.627s
- Quarkus 3.1.0.Final on JVM mode
- Product catalog endpoint functional (200 OK)
- Session management issue identified with cart endpoints (500 errors)
- Root cause: @SessionScoped incompatible with RESTEasy Reactive

Changes:
- pom.xml: Added in-memory connector dependency, ByteBuddy experimental flag
- application.properties: Split reactive messaging channels, enabled broadcast
- *MDB.java: Updated to use orders-in channel
- ShoppingCartOrderProcessor.java: Updated to use orders-out channel
- db/migration/V1_3__AddSequences.sql: Created sequences for Hibernate
- .konveyor/handoff.md: Added comprehensive Verify section

Status: Build PASSED, Runtime partially functional (1/4 endpoints)
Known Issue: Session context requires RESTEasy Classic or redesign